--- a/global.css
+++ b/global.css
@@ -3,8 +3,8 @@
   font-family: "Inter";
   color-scheme: dark;
   --dark: #131315;
-  --light: #FFFBFE;
-  --main: #FAF33E;
+  --light: #fffbfe;
+  --main: #faf33e;
   --main-half-opacity: #faf33e70;
   --secondary: #60a5fa;
   --secondary-dark: #2563eb;
@@ -28,7 +28,7 @@ html {
 
 body {
   --body-width: min(48rem, 72vw);
-  --body-margin-x: calc((100vw - var(--body-width))/2);
+  --body-margin-x: calc((100vw - var(--body-width)) / 2);
   width: var(--body-width);
   margin: 0 auto;
   color: var(--light);
