Update from https://github.com/sahithyandev/static-blog/commit/60824c11c527bbb4e92214ed50f3b094386d05a7

--- a/global.css
+++ b/global.css
@@ -109,6 +109,7 @@ nav.mobile .toggled-bg .close-btn {
   position: absolute;
   top: var(--margin-top);
   right: 12px;
+  cursor: pointer;
 }
 nav.mobile .toggled-bg ul {
   flex-direction: column;
