--- a/global.css
+++ b/global.css
@@ -8,6 +8,7 @@
   --main-half-opacity: #faf33e70;
   --secondary: #60a5fa;
   --secondary-dark: #2563eb;
+  --project-card-bg: hsl(240deg 8% 14%);
 }
 @media (max-width: 640px) {
   :root {
