Update from https://github.com/sahithyandev/static-blog/commit/ef132594857f5fe8dc8ffa1c03539dc4889e235a

--- a/route-post.css
+++ b/route-post.css
@@ -95,7 +95,7 @@ article figure {
   border-radius: 5px;
 }
 article figure blockquote {
-  margin: auto;
+  margin: 0 0 10px 0;
   max-width: 65ch;
 }
 article figure figcaption {
