Update from https://github.com/sahithyandev/static-blog/commit/989afac74a45855c432abd16d48c341ed29f8cfa

--- a/route-post.css
+++ b/route-post.css
@@ -65,6 +65,9 @@ article {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+article p strong {
+  color: var(--main);
+}
 article .linkable-head .hashtag {
   margin-right: 0.5rem;
   opacity: 0.6;
