--- a/route-post.css
+++ b/route-post.css
@@ -66,7 +66,13 @@ article {
   margin-bottom: 2rem;
 }
 article p strong {
-  color: var(--main);
+  --color: var(--main);
+  color: var(--color);
+}
+@media (prefers-color-scheme: light) {
+  article p strong {
+    --color: var(--secondary-dark);
+  }
 }
 article .linkable-head .hashtag {
   margin-right: 0.5rem;
