Update from https://github.com/sahithyandev/static-blog/commit/8cf05582d34664de6b00806a63e9dda0a5509b0f

--- a/global.css
+++ b/global.css
@@ -7,7 +7,7 @@
   font-size: 18px;
   font-family: "Inter";
   color-scheme: dark;
-  --background: hsl(240, 5%, 8%);
+  --background: hsl(300deg 3% 12%);
   --secondary-background: hsla(240, 5%, 18%, 0.6);
   --font-color: #fffbfe;
   --main: #faf33e;
