--- a/route-post.css
+++ b/route-post.css
@@ -94,12 +94,12 @@ article img.block {
 article figure {
   margin: 0;
   padding: 1em 40px;
-  background-color: #414148;
+  background-color: hsl(240deg, 5%, 27%);
   border-radius: 5px;
 }
 @media (prefers-color-scheme: light) {
   article figure {
-    background-color: #dadadd;
+    background-color: hsl(240deg, 5%, 86%);
   }
 }
 article figure blockquote {
