--- a/route-post.css
+++ b/route-post.css
@@ -132,3 +132,8 @@ article table {
   margin-right: 0.5rem;
   opacity: 0.8;
 }
+
+code[class*=language-],
+pre[class*=language-] {
+  white-space: pre-wrap !important;
+}
