--- a/route-post.css
+++ b/route-post.css
@@ -90,6 +90,7 @@ article img.block {
   max-width: 100%;
   margin: 0 auto;
   max-height: 600px;
+  height: auto;
 }
 article figure {
   margin: 0;
