--- a/route-post.css
+++ b/route-post.css
@@ -132,6 +132,13 @@ article code:not([class*=language-]) {
 article pre[class*=language-] {
   border-radius: 6px;
 }
+article aside.note.type-danger {
+  border: 2px solid #ff3c3c;
+  background: hsla(9deg, 91%, 83%, 0.21);
+  border-radius: 10px;
+  padding: 0px 20px;
+  color: inherit;
+}
 
 .post-share-section {
   display: flex;
