Update from https://github.com/sahithyandev/static-blog/commit/a0b4d77e474fc8f3e760c6e78749f39a683dae42

--- a/global.css
+++ b/global.css
@@ -121,7 +121,9 @@
   --project-card-bg: hsl(240deg 8% 14%);
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -319,4 +321,18 @@ footer {
   margin: 2.25rem 0 1.75rem 0;
   opacity: 0.7;
   font-size: 0.8rem;
+}
+
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
 }
