--- a/route-post.css
+++ b/route-post.css
@@ -1,170 +1,1 @@
-@charset "UTF-8";
-.tags-container {
-  display: flex;
-  justify-content: flex-end;
-  gap: 0.25rem;
-}
-.tags-container .tag::before {
-  content: "#";
-  margin: 1px;
-  opacity: 0.5;
-}
-
-.styled-link {
-  color: var(--secondary);
-  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
-  text-decoration: underline;
-}
-
-.styled-link:hover {
-  color: var(--secondary-dark);
-}
-
-aside.note {
-  border-radius: 10px;
-  padding: 0px 20px;
-  color: inherit;
-  line-height: calc(1em + 0.5rem);
-  border: 2px solid var(--secondary);
-  background-color: hsla(213deg, 94%, 45%, 0.2);
-}
-aside.note.type-danger {
-  border: 2px solid #ff3c3c;
-  background: hsla(9deg, 91%, 83%, 0.21);
-}
-
-.post-title {
-  margin: 2rem 0 0.5rem;
-  font-size: 1.5rem;
-}
-
-.post-meta {
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: auto 1fr auto;
-  grid-template-areas: "release-date . reading-time" ". . tags";
-  font-size: 0.875rem;
-}
-.post-meta--release-date {
-  width: max-content;
-  grid-area: release-date;
-}
-.post-meta--reading-time {
-  width: max-content;
-  grid-area: reading-time;
-  justify-self: flex-end;
-}
-.post-meta .tags-container {
-  grid-area: tags;
-  justify-self: end;
-  justify-content: flex-end;
-}
-
-.toc-container h3 {
-  margin-bottom: 0.25rem;
-}
-.toc-container ol {
-  padding-left: 2.25rem;
-}
-.toc-container ol ul {
-  list-style-type: disc;
-  padding-left: 1.25rem;
-}
-.toc-container ol li {
-  margin-top: 0.25rem;
-}
-
-article {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-article p strong {
-  --color: var(--main);
-  color: var(--color);
-}
-@media (prefers-color-scheme: light) {
-  article p strong {
-    --color: var(--secondary-dark);
-  }
-}
-article .linkable-head .hashtag {
-  margin-right: 0.5rem;
-  opacity: 0.6;
-  font-weight: 500;
-}
-@media (min-width: 640px) {
-  article .linkable-head {
-    position: relative;
-    left: -24px;
-  }
-}
-article img.block {
-  display: block;
-  max-width: 100%;
-  margin: 0 auto;
-  max-height: 600px;
-  height: auto;
-  width: auto;
-}
-article figure {
-  margin: 0;
-  padding: 1em 40px;
-  background-color: hsl(240deg, 5%, 27%);
-  border-radius: 5px;
-}
-@media (prefers-color-scheme: light) {
-  article figure {
-    background-color: hsl(240deg, 5%, 86%);
-  }
-}
-article figure blockquote {
-  margin: 0 0 10px 0;
-  max-width: 65ch;
-}
-article figure figcaption {
-  text-align: right;
-}
-article figure figcaption cite::before {
-  content: "— ";
-}
-article table {
-  margin: 1rem auto;
-  text-align: center;
-  border-spacing: 2rem 0.25rem;
-  border-collapse: collapse;
-}
-article table td,
-article table th {
-  line-height: calc(1rem + 0.4em);
-  border: 1px solid var(--font-color-40);
-  text-align: center;
-  padding: 5px 8px;
-}
-article ul li,
-article ol li {
-  margin: 5px 0;
-  line-height: calc(1em + 0.4rem);
-}
-article code:not([class*=language-]) {
-  background: rgba(110, 118, 129, 0.37);
-  padding: 2px 5px;
-  border-radius: 4px;
-}
-article pre[class*=language-] {
-  border-radius: 6px;
-}
-
-.post-share-section {
-  display: flex;
-  justify-content: space-between;
-  font-size: 0.88rem;
-  align-items: center;
-}
-.post-share-section div:nth-of-type(2) {
-  display: flex;
-  align-items: center;
-}
-.post-share-section .share-span {
-  margin-right: 0.5rem;
-  opacity: 0.8;
-}
+@charset "UTF-8";.tags-container{display:flex;justify-content:flex-end;gap:.25rem}.tags-container .tag::before{content:"#";margin:1px;opacity:.5}.styled-link{color:var(--secondary);transition:all cubic-bezier(.4,0,.2,1) 150ms;text-decoration:underline}.styled-link:hover{color:var(--secondary-dark)}aside.note{border-radius:10px;padding:0 20px;color:inherit;line-height:calc(1em + .5rem);border:2px solid var(--secondary);background-color:hsla(213deg,94%,45%,.2)}aside.note.type-danger{border:2px solid #ff3c3c;background:hsla(9deg,91%,83%,.21)}.post-title{margin:2rem 0 .5rem;font-size:1.5rem}.post-meta{display:grid;grid-template-rows:repeat(2,1fr);grid-template-columns:auto 1fr auto;grid-template-areas:"release-date . reading-time"". . tags";font-size:.875rem}.post-meta--release-date{width:max-content;grid-area:release-date}.post-meta--reading-time{width:max-content;grid-area:reading-time;justify-self:flex-end}.post-meta .tags-container{grid-area:tags;justify-self:end;justify-content:flex-end}.toc-container h3{margin-bottom:.25rem}.toc-container ol{padding-left:2.25rem}.toc-container ol ul{list-style-type:disc;padding-left:1.25rem}.toc-container ol li{margin-top:.25rem}article{margin-top:2rem;margin-bottom:2rem}article p strong{--color:var(--main);color:var(--color)}@media (prefers-color-scheme:light){article p strong{--color:var(--secondary-dark)}}article .linkable-head .hashtag{margin-right:.5rem;opacity:.6;font-weight:500}@media (min-width:640px){article .linkable-head{position:relative;left:-24px}}article img.block{display:block;max-width:100%;margin:0 auto;max-height:600px;height:auto;width:auto}article figure{margin:0;padding:1em 40px;background-color:hsl(240deg,5%,27%);border-radius:5px}@media (prefers-color-scheme:light){article figure{background-color:hsl(240deg,5%,86%)}}article figure blockquote{margin:0 0 10px;max-width:65ch}article figure figcaption{text-align:right}article figure figcaption cite::before{content:"— "}article table{margin:1rem auto;text-align:center;border-spacing:2rem .25rem;border-collapse:collapse}article table td,article table th{line-height:calc(1rem + .4em);border:1px solid var(--font-color-40);text-align:center;padding:5px 8px}article ol li,article ul li{margin:5px 0;line-height:calc(1em + .4rem)}article code:not([class*=language-]){background:rgba(110,118,129,.37);padding:2px 5px;border-radius:4px}article pre[class*=language-]{border-radius:6px}.post-share-section{display:flex;justify-content:space-between;font-size:.88rem;align-items:center}.post-share-section div:nth-of-type(2){display:flex;align-items:center}.post-share-section .share-span{margin-right:.5rem;opacity:.8}
